--- a/views/partials/add-location.hbs
+++ b/views/partials/add-location.hbs
@@ -6,13 +6,19 @@
         <input class="input" type="text" placeholder="Enter Location" name="location">
       </div>
       <div class="field">
+        <input class="input" type="number" step="0.01" placeholder="Enter Latitude" name="latitude">
+      </div>
+      <div class="field">
+        <input class="input" type="number" step="0.01" placeholder="Enter Longitude" name="longitude">
+      </div>
+      <div class="field">
         <input class="input" type="text" placeholder="Enter date visited" name="date">
       </div>
       <div class="field">
         <input class="input" type="text" placeholder="Enter details of visit" name="details">
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter pictures" name="pictures">
+        <input type="file" placeholder="Enter pictures" name="pictures" accept="image/jpg, image/png">
       </div>
     </div>
   </div>
