--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,5 +1,10 @@
 {{> welcome-menu}}
 
-<section class="section">
-  <p> Sign up or Log in... </p>
-</section>
+<div class="columns is-vcentered ">
+  <div class="column has-text-centered">
+    <h> Sign up or Log in... </h>
+  </div>
+  <div class="column">
+    <img src="https://redandgrey.ie/wp-content/uploads/2022/07/WAW-NEW-3-1536x1150.jpg">
+  </div>
+</div>
